Suppress sandbox deprecation warnings by using the Seatbelt wrapper.

OS X deprecated all of the Sandbox API and never provided a replacement.
To hide the deprecation suppressions in the code, we use a wrapper
class.

BUG=chromium:622489
NOPRESUBMIT=true

Review-Url: https://codereview.chromium.org/2369553002
Cr-Commit-Position: refs/heads/master@{#420799}

Former-commit-id: df7ac746097f96e4b6150c017f1e0f7f722926ca